# FireControlSystem

./: README.MD  setup_ubuntu.sh
ArmorDetector/: .gitignore  CMakeLists.txt
ArmorDetector/src/: config.h  detector.cpp  detector.h  library.cpp  library.h  nanodet.cpp  nanodet.h
ArmorDetector/utils/: visualize.h
Communicator/: .gitignore  RobomasterVision.csproj  RobomasterVision.sln
Communicator/src/: ActionSyncRetry.cs  Bytes.cs  CRC.cs  CommandFrame.cs  Program.cs
PowerRuneDetector/: CMakeLists.txt  readme.md
PowerRuneDetector/include/: colourdetect.h  config.h  detect.h  library.h  threshold.h
PowerRuneDetector/src/: colourdetect.cpp  detect.cpp  energy.cpp  library.cpp  threshold.cpp
static/: RobomasterVisionSystem.svg.old  Update Logs.md
